Picked only numeric columns

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 380,
    "id": "05234a2a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 381,
    "id": "a8e4e6de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 382,
    "id": "8bfd2652",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 265,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 266,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12  "
       ]
      },
-     "execution_count": 269,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "4         Atlanta (GA)  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        " Seattle (WA)        104941  2747755.48  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
        "4         Atlanta (GA)    12      38  "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -1469,6 +1469,210 @@
     "plt.xticks(products, rotation='vertical', size=8)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295665</td>\n",
+       "      <td>Macbook Pro Laptop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>2019-12-30 00:01:00</td>\n",
+       "      <td>136 Church St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>295666</td>\n",
+       "      <td>LG Washing Machine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>2019-12-29 07:03:00</td>\n",
+       "      <td>562 2nd St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>295667</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-12 18:21:00</td>\n",
+       "      <td>277 Main St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>295668</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-12-22 15:13:00</td>\n",
+       "      <td>410 6th St, San Francisco, CA 94016</td>\n",
+       "      <td>12</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>San Francisco (CA)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>295669</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-18 12:38:00</td>\n",
+       "      <td>43 Hill St, Atlanta, GA 30301</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>Atlanta (GA)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID               Product  Quantity Ordered  Price Each  \\\n",
+       "0   295665    Macbook Pro Laptop                 1     1700.00   \n",
+       "1   295666    LG Washing Machine                 1      600.00   \n",
+       "2   295667  USB-C Charging Cable                 1       11.95   \n",
+       "3   295668      27in FHD Monitor                 1      149.99   \n",
+       "4   295669  USB-C Charging Cable                 1       11.95   \n",
+       "\n",
+       "           Order Date                        Purchase Address  Month    Sales  \\\n",
+       "0 2019-12-30 00:01:00  136 Church St, New York City, NY 10001     12  1700.00   \n",
+       "1 2019-12-29 07:03:00     562 2nd St, New York City, NY 10001     12   600.00   \n",
+       "2 2019-12-12 18:21:00    277 Main St, New York City, NY 10001     12    11.95   \n",
+       "3 2019-12-22 15:13:00     410 6th St, San Francisco, CA 94016     12   149.99   \n",
+       "4 2019-12-18 12:38:00           43 Hill St, Atlanta, GA 30301     12    11.95   \n",
+       "\n",
+       "                  City  Hour  Minute  \n",
+       "0   New York City (NY)     0       1  \n",
+       "1   New York City (NY)     7       3  \n",
+       "2   New York City (NY)    18      21  \n",
+       "3   San Francisco (CA)    15      13  \n",
+       "4         Atlanta (GA)    12      38  "
+      ]
+     },
+     "execution_count": 400,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Quantity Ordered', 'Price Each', 'Month', 'Sales', 'Hour', 'Minute', 'Product']\n",
+      "Product\n",
+      "20in Monitor                   109.99\n",
+      "27in 4K Gaming Monitor         389.99\n",
+      "27in FHD Monitor               149.99\n",
+      "34in Ultrawide Monitor         379.99\n",
+      "AA Batteries (4-pack)            3.84\n",
+      "AAA Batteries (4-pack)           2.99\n",
+      "Apple Airpods Headphones       150.00\n",
+      "Bose SoundSport Headphones      99.99\n",
+      "Flatscreen TV                  300.00\n",
+      "Google Phone                   600.00\n",
+      "LG Dryer                       600.00\n",
+      "LG Washing Machine             600.00\n",
+      "Lightning Charging Cable        14.95\n",
+      "Macbook Pro Laptop            1700.00\n",
+      "ThinkPad Laptop                999.99\n",
+      "USB-C Charging Cable            11.95\n",
+      "Vareebadd Phone                400.00\n",
+      "Wired Headphones                11.99\n",
+      "iPhone                         700.00\n",
+      "Name: Price Each, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_columns = all_data.select_dtypes(include=['number']).columns\n",
+    "\n",
+    "# Include 'Product' column for grouping\n",
+    "columns_to_group = list(numeric_columns) + ['Product']\n",
+    "\n",
+    "# Create a subset of the DataFrame with these columns only\n",
+    "subset_data = all_data[columns_to_group]\n",
+    "print(columns_to_group)\n",
+    "\n",
+    "# Group by 'Product' and calculate the mean for numeric columns\n",
+    "grouped_prices_data = subset_data.groupby('Product').mean()['Price Each']\n",
+    "# prices = all_data.groupby('Product').mean()\n",
+    "\n",
+    "print(grouped_prices_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
